src/test/deca/context/invalid/class_instanciation_equal_int.deca
//  Description : 
// 
//      Test incorrect qui utilise une classe et instancie un objet égal à un int
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {

}

{
    A oA =23;
}